Fixing spacing on choose plan page narrow view

--- a/client/src/components/ChoosePlan/choosePlan.module.css
+++ b/client/src/components/ChoosePlan/choosePlan.module.css
@@ -99,7 +99,7 @@
   font-size: 70px;
   text-align: center;
   margin: 0px 30px 0px 30px;
-  /*border: dotted;*/
+  border: dotted;
   text-overflow: ellipsis;
   display: block;
   white-space: nowrap;
@@ -110,10 +110,18 @@
   /*font-weight: bold;*/
   font-size: 25px;
   text-align: center;
-  /*border: dashed;*/
+  border: dashed;
   white-space: nowrap;
   /*padding-bottom: 50px;*/
   margin-top: 35px;
+}
+.priceFormula2narrow {
+  /*font-weight: bold;*/
+  font-size: 25px;
+  text-align: center;
+  border: dashed;
+  white-space: nowrap;
+  /*padding-bottom: 50px;*/
 }
 
 .priceTotal {
@@ -127,6 +135,7 @@
   border: solid;
   border-radius: 25px;
   border-color: #ff6505;
+  margin-top: 30px;
 }
 
 /*.priceWaitMessage {
@@ -163,7 +172,7 @@
 .priceSubtext {
   font-size: 25px;
   text-align: center;
-  /*border: solid;*/
+  border: solid;
 }
 
 .box {
